# advent-of-code

2019/: BUILD.bazel  WORKSPACE  go.mod  justfile
2019/1/: BUILD.bazel  problem1.go  problem1_test.go
2019/2/: BUILD.bazel  go.mod  problem2.go  problem2_test.go  solution_hunter.go
2019/3/: BUILD.bazel  problem3.go  problem3_test.go
